--- a/.github/workflows/main_capi-lofi.yml
+++ b/.github/workflows/main_capi-lofi.yml
@@ -24,13 +24,13 @@ jobs:
 
       - name: dotnet publish
         working-directory: ./BackEnd
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ./myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ./BackEnd/myapp
 
   deploy:
     runs-on: windows-latest
@@ -60,4 +60,4 @@ jobs:
         with:
           app-name: 'capi-lofi'
           slot-name: 'Production'
-          package: ${{env.DOTNET_ROOT}}/myapp
+          package: ./BackEnd/myapp
