migrate to IdentityUser

--- a/BackEnd/API/appsettings.json
+++ b/BackEnd/API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=CapiLofiDb; Uid=sa; Pwd=12345;TrustServerCertificate=True"
-    //"DefaultConnection": "Data Source=DEV-PHUCTRAN\\DEVPHUCTRANN;Initial Catalog=CapiLofiDb;User ID=sa;Password=123456;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+//    "DefaultConnection": "Server=(local);Database=CapiLofiDb; Uid=sa; Pwd=12345;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=DEVPHUCTRANN-MA;Initial Catalog=CapiLofiDb;User ID=sa;Password=123456;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
 
   },
   "Authentication": {
