finish fast-login

--- a/BackEnd/API/appsettings.json
+++ b/BackEnd/API/appsettings.json
@@ -3,9 +3,9 @@
   "EmailHost": "smtp.gmail.com",
   "EmailUserName": "trangiaphuc362003181@gmail.com",
   "EmailPassword": "gqlk eozk oxcr nbrq",
-  
+
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DEVPHUCTRANN-MA;Initial Catalog=CapiLofiDb;User ID=sa;Password=123456;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=DEVPHUCTRANN;Initial Catalog=CapiLofiDb;User ID=sa;Password=12345;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   
   "Authentication": {
