--- a/BackEnd/API/appsettings.json
+++ b/BackEnd/API/appsettings.json
@@ -5,7 +5,8 @@
   "EmailPassword": "gqlk eozk oxcr nbrq",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DEVPHUCTRANN;Initial Catalog=CapiLofiDb;User ID=sa;Password=12345;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    //"DefaultConnection": "Data Source=DEVPHUCTRANN;Initial Catalog=CapiLofiDb;User ID=sa;Password=12345;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "DefaultConnection": "Server=(local);Database=CapiLofiDb;Uid=sa;Pwd=12345;TrustServerCertificate=True"
   },
   
   "Authentication": {
